--- a/src/app/shared/bed-select/bed-select.component.html
+++ b/src/app/shared/bed-select/bed-select.component.html
@@ -6,6 +6,7 @@
                 (completeMethod)="search($event)"
                 (onDropdownClick)="searchAll()"
                 (onBlur)="onBlur()"
+                appendTo="body"
                 field="label"
                 name="bed-select"
                 class="bed-select"
