--- a/src/app/shared/crop-select/crop-select.component.html
+++ b/src/app/shared/crop-select/crop-select.component.html
@@ -4,6 +4,7 @@
                 [forceSelection]="true"
                 (completeMethod)="search($event)"
                 (onBlur)="onBlur()"
+                appendTo="body"
                 field="label"
                 name="crop-select"
                 class="crop-select"
