--- a/src/app/crop/agrovoc-plant-product-tuple-select/agrovoc-plant-product-tuple-select.component.html
+++ b/src/app/crop/agrovoc-plant-product-tuple-select/agrovoc-plant-product-tuple-select.component.html
@@ -1,17 +1,32 @@
-<p-autoComplete [ngModel]="selection"
-                (ngModelChange)="onSelectionChange($event)"
-                [suggestions]="suggestions"
-                [forceSelection]="true"
-                [minLength]="3"
-                (completeMethod)="search($event)"
-                field="plantLabel"
-                name="plant-label"
-                class="plant-product-select"
->
-  <ng-template let-tuple pTemplate="item">
-    <div class="ui-helper-clearfix tuple-item">
-      <span class="pc-taxon">{{ tuple.plantLabel }}</span>
-      <span class="product">{{ tuple.productLabel }}</span>
-    </div>
-  </ng-template>
-</p-autoComplete>
+<div class="tuple-select">
+
+  <p-autoComplete [ngModel]="selection"
+                  (ngModelChange)="onSelectionChange($event)"
+                  [suggestions]="suggestions"
+                  [forceSelection]="true"
+                  [minLength]="3"
+                  (completeMethod)="search($event)"
+                  appendTo="body"
+                  field="matchedTerm"
+                  dataKey="id"
+                  name="plant-label"
+                  class="plant-product-select"
+  >
+    <ng-template let-tuple pTemplate="item">
+      <div class="ui-helper-clearfix tuple-item">
+        <span class="matched-term">{{ tuple.matchedTerm }}</span>
+        <span class="agrovoc-labels">
+        <div class="pc-species">{{ tuple.plantPreferredLabel }}</div>
+        <div class="pc-product">{{ tuple.productPreferredLabel }}</div>
+      </span>
+      </div>
+    </ng-template>
+  </p-autoComplete>
+  <span *ngIf="showClearButton">
+    <a class="clear-button"
+       (click)="onClearClick()"
+       title="Clear" i18n-title>
+      <i class="pi pi-trash"></i>
+    </a>
+  </span>
+</div>
