--- a/src/app/crop/agrovoc-plant-product-tuple-select/agrovoc-plant-product-tuple-select.component.scss
+++ b/src/app/crop/agrovoc-plant-product-tuple-select/agrovoc-plant-product-tuple-select.component.scss
@@ -1,10 +1,26 @@
-.plant-product-select {
-  display: block;
+.tuple-select {
+  display: flex;
+  align-items: center;
 
-  ::ng-deep .ui-autocomplete {
-    width: 100%;
-    > input {
+  .plant-product-select {
+    flex: 1 1 auto;
+    display: block;
+
+    ::ng-deep .ui-autocomplete {
       width: 100%;
+      > input {
+        width: 100%;
+      }
+    }
+  }
+
+  .clear-button {
+    flex: 0 0 auto;
+    padding: .3em;
+
+    &:hover {
+      cursor: pointer;
+      opacity: .6;
     }
   }
 }
@@ -18,11 +34,13 @@
     flex: 1 1 auto;
     display: inline-block;
   }
-  > .pc-taxon {
-    margin-right: 1em;
-  }
-  .product {
-    font-size: .9em;
+  > .agrovoc-labels {
+    margin-left: 1em;
     text-align: right;
+  }
+
+  .pc-product {
+    font-size: .8em;
+    margin: .1em 0;
   }
 }
