--- a/src/app/shared/crop/crop.component.scss
+++ b/src/app/shared/crop/crop.component.scss
@@ -10,9 +10,23 @@
     flex: 0 0 2em;
   }
 
-  > .plant {
+  .display-name {
+    flex: 1 1 10em;
+    font-size: 1.2em;
+  }
+
+  > .taxon {
     flex: 1 1 10em;
 
+    .pc-cultivar {
+      margin-left: .5em;
+    }
+
+    .family {
+      opacity: .7;
+      font-size: .9em;
+      margin: .1em 0;
+    }
   }
 
   > .product {
