--- a/src/app/bed/bed-form/bed-form.component.html
+++ b/src/app/bed/bed-form/bed-form.component.html
@@ -16,6 +16,13 @@
       >
     </div>
 
+    <div class="row">
+      <label i18n>Patch</label>
+      <pc-patch-input [(ngModel)]="bed.patch"
+                      name="bed-patch"
+      ></pc-patch-input>
+    </div>
+
     <div class="actions">
       <button type="submit" hidden></button>
 
