--- a/src/app/shared/bed-preparation/bed-preparation.component.scss
+++ b/src/app/shared/bed-preparation/bed-preparation.component.scss
@@ -9,8 +9,9 @@
 
   .icon {
     flex: 0 0 auto;
-    width: 1em;
-    height: 1em;
+    width: 2em;
+    height: 2em;
+    margin: .1em;
   }
 
   .type {
