--- a/src/app/shared/culture/culture.component.html
+++ b/src/app/shared/culture/culture.component.html
@@ -15,6 +15,7 @@
   >
     <pc-bed [id]="bedId | async"
             [showIcon]="true"
+            [showPatch]="false"
     ></pc-bed>
   </span>
   <span class="preparation" *ngIf="showBedPreparation"
