--- a/src/app/shared/bed/bed.component.scss
+++ b/src/app/shared/bed/bed.component.scss
@@ -13,5 +13,21 @@
     margin: .3em;
   }
 
+  >.patch {
+    flex: 1 1 10em;
+    margin: .3em;
+
+    >* {
+      display: inline-block;
+    }
+
+    >.label {
+      opacity: .7;
+      font-size: .9em;
+      margin-right: 1em;
+    }
+
+  }
+
 
 }
