--- a/src/app/shared/culture/culture.component.scss
+++ b/src/app/shared/culture/culture.component.scss
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
 
-  >* {
+  > * {
     flex: 1 1 10em;
     display: inline-block;
     margin: .3em;
@@ -16,11 +16,11 @@
 
   .bed {
     flex: 0 0 3em;
+  }
 
-    ::ng-deep .icon {
-      width: .9em;
-      height: .9em;
-    }
+  :not(.icon) ::ng-deep .icon {
+    width: 1.2em;
+    height: 1.2em;
   }
 
 }
