--- a/src/app/shared/crop-filter/crop-filter.component.html
+++ b/src/app/shared/crop-filter/crop-filter.component.html
@@ -17,10 +17,10 @@
     </ng-template>
   </p-selectButton>
 
-  <p-checkbox [ngModel]="privateCrops | async"
-              (ngModelChange)="onPrivateCropsChanged($event)"
-              [binary]="true"
-              name="private-crops"
-              label="Private crops only" i18n-label
-  ></p-checkbox>
+  <!--<p-checkbox [ngModel]="privateCrops | async"-->
+              <!--(ngModelChange)="onPrivateCropsChanged($event)"-->
+              <!--[binary]="true"-->
+              <!--name="private-crops"-->
+              <!--label="Private crops only" i18n-label-->
+  <!--&gt;</p-checkbox>-->
 </div>
