Hardcoded string translation

--- a/src/app/bed/bed-sort-select/bed-sort-select.component.html
+++ b/src/app/bed/bed-sort-select/bed-sort-select.component.html
@@ -1,4 +1,4 @@
-<p-dropdown [options]="sortOptions"
+<p-dropdown [options]="sortOptions | async"
             [(ngModel)]="sortValue"
             (onChange)="onSortChange($event)"
             [autoWidth]="false"
