--- a/src/app/culture/culture-sort-select/culture-sort-select.component.html
+++ b/src/app/culture/culture-sort-select/culture-sort-select.component.html
@@ -1,5 +1,5 @@
 <span class="culture-sort-select pc-sort-select">
-  <p-dropdown [options]="fieldOptions"
+  <p-dropdown [options]="fieldOptions$ | async"
               [ngModel]="fieldValue | async"
               (ngModelChange)="onFieldChange($event)"
               [autoWidth]="false"
