Rework admin area Fix timeline groups sorting

--- a/src/app/admin/admin-area/admin-area.component.html
+++ b/src/app/admin/admin-area/admin-area.component.html
@@ -2,6 +2,8 @@
   <div class="header">
     <pc-header-menu></pc-header-menu>
   </div>
-  <router-outlet></router-outlet>
+  <div class="content">
+    <router-outlet></router-outlet>
+  </div>
 </div>
 
