--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,9 @@
   <p-toast position="top-center"></p-toast>
 
   <div class="account-toolbar">
+    <span class="admin-menu">
+      <pc-admin-menu></pc-admin-menu>
+    </span>
     <span class="languages">
       <pc-language-select [ngModel]="currentLanguage"
                           (ngModelChange)="onLanguageChanged($event)"
