--- a/src/app/admin/user-list/users-list.component.html
+++ b/src/app/admin/user-list/users-list.component.html
@@ -10,16 +10,25 @@
   >
     <ng-template pTemplate="header">
       <tr>
+        <th>Id</th>
         <th>First name</th>
         <th>Last name</th>
         <th>Language</th>
+        <th>Actions</th>
       </tr>
     </ng-template>
     <ng-template pTemplate="body" let-user>
       <tr>
+        <td>{{user.id}}</td>
         <td>{{user.firstName}}</td>
         <td>{{user.lastName}}</td>
         <td>{{user.language}}</td>
+        <td>
+          <button pButton type="button" icon="pi pi-times" iconPos="left"
+                  (click)="onUserDeleteClicked(user)"
+          ></button>
+
+        </td>
       </tr>
     </ng-template>
 
